<resources>
    <string name="app_name">Comandas</string>
    <string name="login">Iniciar</string>
    <string name="email">Email</string>
    <string name="contrasena">Contraseña</string>
    <string name="registrarse">Registrar nuevo usuario</string>
    <string name="registrar">Registrar</string>
    <string name="RegresaLogin">Terminar sesion</string>
    <string name="Entrar_Admin">¿Eres administrador? Identificate</string>
    <string name="salir">Salir</string>
    <string name="TituloLoginAdmin">Administrador</string>
    <string name="Titulo_Iniciar">Iniciar sesion</string>
    <string name="btn_Titulo_Inventario">Inventario</string>
    <string name="nombre_articulo_hint">Nombre del articulo</string>
    <string name="prueba1_editardespues">Prueba1</string>
    <string name="cantidad_articulo">Cantidad: </string>
    <string name="titulo_fechaRegistro">Fecha de registro</string>
    <string name="numero_de_unidades_hint">Numero de unidades</string>
    <string name="precio_articulo_hint">Precio</string>
    <string name="registrar_nuevo_producto_lbl">Añadir</string>
    <string name="guardar_producto_lbl">Guardar</string>
    <string name="eliminar_producto_lbl">Eliminar</string>
    <string name="confirmar_producto">Añadir</string>
    <string name="a_adir_producto">Añadir producto</string>
    <string name="fecha_de_registro_label">Fecha. Reg</string>
    <string name="guardar_menu_label">Guardar</string>
    <string name="eliminar_menu_label">Eliminar</string>
</resources>