<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/LinearLayoutInsertar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Añadir producto"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"    
            />

        <EditText
            android:id="@+id/inputNombreProducto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_articulo_hint"
            android:minHeight="48dp"
            android:paddingTop="10dp" />

        <EditText
            android:id="@+id/inputNumUnidades"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/numero_de_unidades_hint"
            android:minHeight="48dp"
            android:paddingTop="10dp" />

        <EditText
            android:id="@+id/inputPrecioProducto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/precio_articulo_hint"
            android:minHeight="48dp"
            android:paddingTop="10dp" />

        <Button
            android:text="@string/confirmar_producto"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        </LinearLayout>

</LinearLayout>