<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="8dp"
    app:cardCornerRadius="8dp"
    android:layout_margin="16dp">
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre_articulo_hint"
                android:textColor="@color/black"
                android:textSize="20sp"

                />
            <TextView
                android:id="@+id/Nombre_articulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prueba1_editardespues"
                android:layout_marginLeft="8dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="italic|bold"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cantidad_articulo"
                android:textColor="@color/black"
                android:textSize="20sp"

                />
            <TextView
                android:id="@+id/cantidad_articulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prueba1_editardespues"
                android:layout_marginLeft="8dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="italic|bold"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Precio:"
                android:textColor="@color/black"
                android:textSize="20sp"

                />
            <TextView
                android:id="@+id/precio_articulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prueba1_editardespues"
                android:layout_marginLeft="8dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="italic|bold"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titulo_fechaRegistro"
                android:textColor="@color/black"
                android:textSize="20sp"

                />
            <TextView
                android:id="@+id/fecha_registro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prueba1_editardespues"
                android:layout_marginLeft="8dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="italic|bold"
                />

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>